# genrb

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cmake/: genrb-extras.cmake.em
scripts/: CMakeLists.txt  genmsg_rb.py  gensrv_rb.py
src/genrb/: generator.py  genrb_main.py
