<?xml version="1.0"?>
<package>
  <name>genrb</name>
  <version>0.0.0</version>
  <description>ruby ROS message and service generators</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/genruby</url>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>rb</message_generator>
  </export>
</package>
