<?xml version="1.0"?>
<package>
  <name>genrb</name>
  <version>0.1.0</version>
  <description>ruby ROS message and service generators</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/genrb</url>
  <url type="bugtracker">http://github.com/OTL/rosruby</url>

  <author email="t.ogura@gmail.com">Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>rb</message_generator>
  </export>
</package>
